squash sketch